[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senol-randomizer"
version = "0.2.0"
description = "Cryptography-inspired random generation experiment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Batuhan Şenol"}
]

dependencies = [
    "gmpy2"
]

keywords = [
    "random",
    "cryptography",
    "rng",
    "number-generation",
    "random-data"
]

classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
